--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,5 @@
 services:
   - type: web
     name: hotelreservation-backend
-    env: java
+    env: docker
     plan: free
-    buildCommand: "./mvnw clean package -DskipTests"
-    startCommand: "java -jar target/*.jar"
-    envVars:
-      - key: JAVA_HOME
-        value: /usr/lib/jvm/java-21-openjdk
